# Metis_Code_Analyzer_Plus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  code_analyzer.pson
certs/: gen_certs.ps1
docs/: API.md  ARCHITECTURE.md  BACKGROUND.md  CHANGELOG.md  CI.md  CONFIGURATION.md  GOVERNMENT_REFERENCES.md  HOWTO.md  SUPPORT.md  THIRD_PARTY.md  TODO.md  openapi.yaml
include/metis/codeanalyzer/: ai.hpp  analyzer.hpp  ast.hpp  auth.hpp  health.hpp  http.hpp  json.hpp  license.hpp  log.hpp  metrics.hpp  pdf.hpp  pson.hpp  rules.hpp  scanner.hpp  technologies.hpp  version.hpp
src/: main.cpp
web/: app.js  i18n.js  index.html  style.css
